frontend/src/components/atoms/dialog/Dialog.module.css
.backdrop {
  align-items: center;
  display: flex;
  height: 100vh;
  justify-content: center;
  left: 0;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 500;
}

.hidden {
  visibility: hidden;
}

.dialog {
  --underlineColour: var(--primaryColour, var(--lightGreen));
  background-color: var(--white);
  padding: 15px;
  border: 1px solid var(--noteGrey);
  border-radius: 9px;
  width: 618px;
  min-height: 413px;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.header {
  justify-content: space-between;
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  min-height: 40px;
  padding-bottom: 10px;
}

.image {
  height: 100px;
  margin-bottom: 5px;
}

.messageContainer {
  composes: text from "../../../globalStyles/Typography.module.css";
  padding: 0 40px 60px 40px;
  font-weight: 200;
  font-size: 16px;
  margin: 0;
  text-align: center;
}

.footer {
  align-items: center;
  display: flex;
  justify-content: center;
  margin-top: 2rem;
}

.footer div {
  flex: 1 0 auto;
  margin: 0 1rem;
  max-width: 50%;
}

.footer button {
  width: 100%;
}

